8.0.45/README.zh.md
[English](README.md) · [中文](README.zh.md)

# 微信 8.0.45 安卓版下载（官方地址）

**版本号 `8.0.45`** · **发布日期 2024-01-02** · **平台 Android**

> 微信 8.0.45 是微信 Android 客户端的一个历史版本。
> 以下下载链接均指向腾讯官方 CDN（`dldir1v6.qq.com`），非第三方镜像。

## ⬇️ 微信 8.0.45 下载

| 架构 | 构建号 | 文件名 | 下载 |
|---|---|---|---|
| arm64（64位） | `28002d33` | `weixin8045android2520_0x28002d33_arm64.apk` | [⬇️ 官方下载](https://dldir1.qq.com/weixin/android/weixin8045android2520_0x28002d33_arm64.apk) |
| arm64（64位） | `28002d34` | `weixin8045android2521_0x28002d34_arm64_1.apk` | [⬇️ 官方下载](https://dldir1.qq.com/weixin/android/weixin8045android2521_0x28002d34_arm64_1.apk) |

## 版本信息

| 项目 | 内容 |
|---|---|
| 版本号 | **8.0.45** |
| 发布日期 | 2024-01-02 |
| 平台 | Android |
| 安装包类型 | APK |
| 官方来源 | 腾讯官方 CDN |

## 说明

微信 8.0.45 发布于 2024-01-02。如果你需要回退到该版本，或核对具体构建号，
可直接使用上表中的官方直链下载。

> ⚠️ 安装历史版本前请先备份聊天记录。Android 不支持直接降级安装，可能需要先卸载当前版本。

## 相关版本

[⬆️ 更新的版本：微信 8.0.46](../8.0.46/) ｜ [⬇️ 更早的版本：微信 8.0.44](../8.0.44/)

[← 返回全部版本](../)

---

*公开下载地址的整理归档，与腾讯公司无关。*
